# powerpc-rs

./: Cargo.toml  README.md  isa.yaml
.github/workflows/: test.yml
asm/: Cargo.toml
asm/src/: generated.rs  lib.rs  types.rs
asm/tests/: test_asm.rs
disasm/: Cargo.toml
disasm/src/: disasm.rs  generated.rs  lib.rs
disasm/tests/: test_altivec.rs  test_disasm.rs  test_ppc64.rs  test_ps.rs  test_vmx.rs
fuzz/: Cargo.toml
fuzz/src/: main.rs
genisa/: Cargo.toml
genisa/src/: asm.rs  condition.rs  disasm.rs  isa.rs  main.rs
