[workspace]
members = ["asm", "disasm", "fuzz", "genisa"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Luke Street <luke@street.dev>"]
license = "MIT OR Apache-2.0"
keywords = ["powerpc", "disassembler", "assembler", "ppc"]
repository = "https://github.com/encounter/powerpc-rs.git"
rust-version = "1.74"
