[package]
name = "powerpc-asm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PowerPC assembler"
readme = "../README.md"
keywords.workspace = true
repository.workspace = true
documentation = "https://docs.rs/powerpc-asm"
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
phf = "0.11"
