[package]
name = "powerpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PowerPC disassembler"
readme = "../README.md"
keywords.workspace = true
repository.workspace = true
documentation = "https://docs.rs/powerpc"
rust-version.workspace = true

[dependencies]
# Intentionally left blank.
