[package]
name = "powerpc-fuzz"
version.workspace = true
edition.workspace = true
authors = ["Richard Patel <me@terorie.dev>"]
license = "GPL-3.0-or-later"
description = "Complete fuzzer for powerpc"
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
clap = "4"
num_cpus = "1.16"
powerpc = { path = "../disasm" }
